# mkr_maths

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/maths/: colour.cpp  colour.h  line.cpp  line.h  maths_util.h  matrix.h  matrix_util.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
test/: CMakeLists.txt
test/ut/: matrix_test.cpp  quaternion_test.cpp
